--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
+<head>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link href="style.css" rel="stylesheet"/>
+    <title>Product Landing Page</title>
+</head>
 <body>
-<link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-  integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-  crossorigin="anonymous"
-/>
-  
   <div id="page-wrapper">
     <header id="header">
       <div class="logo">
@@ -90,5 +93,5 @@
         <span>Pearl Drums Incorporated, Copyright 2021</span>
       </footer>
     </div>
-    
+    </div>
 </body>
